<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_landing_form"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/tv_title_form"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_user"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_title_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/text_input_your_name"
        android:textAlignment="center"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edt_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/text_hint_name"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_name"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/edt_name"
        app:layout_constraintStart_toStartOf="@id/edt_name"
        app:layout_constraintEnd_toEndOf="@+id/edt_name"
        android:text="@string/text_submit"
        android:backgroundTint="@color/purple"
        android:textColor="@color/beige"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>